--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
+@import url("ress/ress.css");
 @import url("toastify-js/src/toastify.css");
-
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -14,9 +14,9 @@
     -webkit-text-size-adjust: 100%;
 }
 
-/* .container div {
-    border: 1px solid black;
-} */
+.container div {
+    border: 1px solid transparent;
+}
 
 .container {
     width: 400px;
@@ -39,7 +39,9 @@
 .search {
     grid-column: 1/3;
     display: grid;
-    place-items: center;
+    place-items: end center;
+    grid-template-rows: 1fr 1fr;
+    z-index: 2;
 }
 
 .search input {
@@ -64,22 +66,40 @@
     place-items: center;
 }
 
-.weather-graphic {
+.weather-box {
     grid-column: 1/3;
-    display: grid;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     place-items: center;
 }
 
-.weather-graphic > img {
-    width: 80%;
+#weather-graphic {
+    position: relative;
+    width: 70%;
+    scale: 1.5;
+    
+    user-drag: none;  
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
+
 
 .temperature {
     grid-column: 1/3;
-    font-size: 80pt;
-    display: grid;
-    place-items: start center;
+    font-size: 32pt;
+    line-height: 1;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
     font-weight: bold;
+}
+
+#feels-like {
+    font-size: 16pt;
 }
 
 .humidity, .wind {
@@ -106,7 +126,7 @@
     place-self: end start;
 }
 
-sup {
+h1 > sup {
     font-size: 28pt;
     font-weight: bold;
 }
@@ -115,5 +135,12 @@ p {
     margin: 0;
     padding: 0;
     display: inline-block;
+}
+
+.weight-thin {
+    font-weight: 100;
+}
+.gray {
+    color: gray;
 }
 
